--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,7 +56,7 @@ prepare_signal_reproductible_build_image:
     - /kaniko/executor
       --context "${CI_PROJECT_DIR}/Signal-Android/reproducible-builds"
       --dockerfile "${CI_PROJECT_DIR}/Signal-Android/reproducible-builds/Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG}"
+      --destination "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG:-latest}"
 
 # Build Langis using:
 # - Signal-Android/reproductible-builds image
@@ -65,7 +65,7 @@ prepare_signal_reproductible_build_image:
 build_langis:
   stage: build
   image:
-    name: "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG}"
+    name: "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG:-latest}"
     entrypoint: [""]
   script:
     - ls -lha
@@ -85,7 +85,7 @@ build_langis:
 sign_langis:
   stage: sign
   image:
-    name: "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG}"
+    name: "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG:-latest}"
     entrypoint: [""]
   script:
     # To sign packages ; you'll need a keystore with your certificate
