--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,8 +56,20 @@ prepare_signal_reproductible_build_image:
     - /kaniko/executor
       --context "${CI_PROJECT_DIR}/Signal-Android/reproducible-builds"
       --dockerfile "${CI_PROJECT_DIR}/Signal-Android/reproducible-builds/Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}:latest"
-      # --destination "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG:-latest}"
+      --destination "${CI_REGISTRY_IMAGE}/reproductible-builds:${CI_COMMIT_TAG}"
+
+prepare_custom_fdroidserver_build_image:
+  stage: prepare
+  image:
+    name: gcr.io/kaniko-project/executor:v1.23.2-debug
+    entrypoint: [""]
+  when: manual
+  script:
+    - /kaniko/executor
+      --context "${CI_PROJECT_DIR}/custom-fdroidserver"
+      --dockerfile "${CI_PROJECT_DIR}/custom-fdroidserver/Dockerfile"
+      --destination "${CI_REGISTRY_IMAGE}/custom-fdroidserver:${CI_COMMIT_TAG}"
+
 # Build Langis using:
 # - Signal-Android/reproductible-builds image
 # - Latest Signal-Android sources published
@@ -65,7 +77,7 @@ prepare_signal_reproductible_build_image:
 build_langis:
   stage: build
   image:
-    name: "${CI_REGISTRY_IMAGE}:latest"
+    name: "${CI_REGISTRY_IMAGE}/reproductible-builds:latest"
     entrypoint: [""]
   script:
     - ls -lha
@@ -85,7 +97,7 @@ build_langis:
 sign_langis:
   stage: sign
   image:
-    name: "${CI_REGISTRY_IMAGE}:latest"
+    name: "${CI_REGISTRY_IMAGE}/reproductible-builds:latest"
     entrypoint: [""]
   script:
     # To sign packages ; you'll need a keystore with your certificate
