--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ prepare_fetch_signal_sources:
 
 # Build the container image provided by Signal-Android/reproductible-builds, publish
 # it to the local Container registry
-prepare_signal_reproductible_build_image:
+build_signal_reproductible_image:
   stage: build_tools
   image:
     name: gcr.io/kaniko-project/executor:v1.23.2-debug
@@ -58,8 +58,8 @@ prepare_signal_reproductible_build_image:
       --dockerfile "${CI_PROJECT_DIR}/Signal-Android/reproducible-builds/Dockerfile"
       --destination "${CI_REGISTRY_IMAGE}/reproductible-builds:${CI_COMMIT_TAG}"
 
-prepare_custom_fdroidserver_build_image:
-  stage: prepare
+build_custom_fdroidserver_image:
+  stage: build_tools
   image:
     name: gcr.io/kaniko-project/executor:v1.23.2-debug
     entrypoint: [""]
