fix: patch FcmRefreshJob - signal v7.38.3

--- a/custom-fdroidserver/Dockerfile
+++ b/custom-fdroidserver/Dockerfile
@@ -5,10 +5,10 @@ RUN apt-get -y update && \
     apt-get -y install python3-pip
 
 # we fetch this specific commit because of this https://github.com/wbond/oscrypto/issues/78
-RUN git clone https://github.com/wbond/oscrypto.git && \
-    cd oscrypto && \
-    git reset --hard 1547f535001ba568b239b8797465536759c742a3 && \
-    python3 setup.py install
+# RUN git clone https://github.com/wbond/oscrypto.git && \
+#     cd oscrypto && \
+#     git reset --hard 1547f535001ba568b239b8797465536759c742a3 && \
+#     python3 setup.py install
 
 # we install a recent version of androguard
 RUN git clone --recursive https://github.com/androguard/androguard.git && \
